--- a/openings-collection/templates/add_opening.html
+++ b/openings-collection/templates/add_opening.html
@@ -10,7 +10,7 @@ ul.topnav {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: #0c1032;
 }
 
 ul.topnav li {float: left;}
@@ -25,7 +25,7 @@ ul.topnav li a {
 
 ul.topnav li a:hover:not(.active) {background-color: #111;}
 
-ul.topnav li a.active {background-color: #04AA6D;}
+ul.topnav li a.active {background-color: #0c1032;}
 
 ul.topnav li.right {float: right;}
 
@@ -43,7 +43,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 .icon {
   padding: 10px;
   background: #04AA6D;
-  color: white;
+  color: rgb(2, 119, 148);
   min-width: 50px;
   text-align: center;
 }
@@ -60,7 +60,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 /* Set a style for the submit button */
 .btn {
-  background-color: #04AA6D;
+  background-color: #0417aa;
   color: white;
   padding: 15px 20px;
   border: none;
@@ -75,6 +75,8 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 body {
   background: #fff;
+  height: 100%;
+  overflow: hidden;
 }
 
 .title {
@@ -83,22 +85,12 @@ body {
 }
 
 .wrapper {
-  background: url("https://img.freepik.com/free-photo/old-black-background-grunge-texture-dark-wallpaper-blackboard-chalkboard-room-wall_1258-28312.jpg?w=1380&t=st=1667777185~exp=1667777785~hmac=4380dae2330e43f0a953299a429ca68489d325b5854668a99e8689ee4feed6aa"), #111111;
+  background: url("https://img.freepik.com/free-vector/gradient-black-background-with-realistic-elements_23-2149158433.jpg?w=1380&t=st=1667857947~exp=1667858547~hmac=eca350e26e42294c8d2f0b6ef62d7a6b2b70dd162b3e909e24cf4225dfe31f22"), #111111;
   color: #eee;
   height: 100vh;
   min-width: 360px;
-  width: 100%;
-
-  
+  width: 100%;  
 }
-
-@keyframes scroll {
-   100%{
-    background-position:0px -3000px;
-  }
-}
-
-
 
 </style>
 
@@ -110,8 +102,8 @@ body {
 
 <ul class="topnav">
   <li><a class="active" href="/">Home</a></li>
-  <li><a href="/openings">Openings</a></li>
   <li><a href="/add_opening">Add new opening</a></li>
+  <li><a href="/show_games">Show all games</a></li>
 </ul>
 
 <form id="inform" action="/add_opening" style="max-width:500px;margin:auto" method="post">
