add searchbox to games

--- a/openings-collection/templates/index.html
+++ b/openings-collection/templates/index.html
@@ -57,7 +57,7 @@ table {
             <td>{{ opening.eco_code }}</td>
             <td>{{ opening.moves }}</td>
             <td>
-              <a href="opening/{{ opening.name }}" class="btn btn-outline-primary btn-sm" role="button"> Add game </a>
+              <a href="add_game/{{ opening.name }}" class="btn btn-outline-primary btn-sm" role="button"> Add game </a>
               <a href="edit/{{ opening.name }}" class="btn btn-outline-primary btn-sm"role="button"> Edit opening </a>
               <a href="delete/{{ opening.name }}" class="btn btn-outline-danger" role="button"> Delete opening </a>
             </td>
