--- a/openings-collection/templates/show_games.html
+++ b/openings-collection/templates/show_games.html
@@ -33,7 +33,7 @@ table {
     <li><a href="/add_opening">Add new opening</a></li>
     <li><a href="/show_games">Show all games</a></li>
     <li>
-      <form class="form-check form-check-inline" action="/" method="post" style="padding-top: 2%;">
+      <form class="form-check form-check-inline" action="/show_games" method="post" style="padding-top: 2%;">
         <input class="form-control mr-sm-2" type="search" name="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
