--- a/openings-collection/templates/add_opening.html
+++ b/openings-collection/templates/add_opening.html
@@ -2,98 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-body {margin: 0;}
-
-ul.topnav {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #0c1032;
-}
-
-ul.topnav li {float: left;}
-
-ul.topnav li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-ul.topnav li a:hover:not(.active) {background-color: #111;}
-
-ul.topnav li a.active {background-color: #0c1032;}
-
-ul.topnav li.right {float: right;}
-
-
-body {font-family: Arial, Helvetica, sans-serif;}
-* {box-sizing: border-box;}
-
-.input-container {
-  display: -ms-flexbox; /* IE10 */
-  display: flex;
-  width: 100%;
-  margin-bottom: 15px;
-}
-
-.icon {
-  padding: 10px;
-  background: #04AA6D;
-  color: rgb(2, 119, 148);
-  min-width: 50px;
-  text-align: center;
-}
-
-.input-field {
-  width: 100%;
-  padding: 10px;
-  outline: none;
-}
-
-.input-field:focus {
-  border: 2px solid dodgerblue;
-}
-
-/* Set a style for the submit button */
-.btn {
-  background-color: #0417aa;
-  color: white;
-  padding: 15px 20px;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-  opacity: 0.9;
-}
-
-.btn:hover {
-  opacity: 1;
-}
-
-body {
-  background: #fff;
-  height: 100%;
-  overflow: hidden;
-}
-
-.title {
-  font-size: 2.5rem;
-  font-family: 'Lobster', cursive;
-}
-
-.wrapper {
-  background: url("https://img.freepik.com/free-vector/gradient-black-background-with-realistic-elements_23-2149158433.jpg?w=1380&t=st=1667857947~exp=1667858547~hmac=eca350e26e42294c8d2f0b6ef62d7a6b2b70dd162b3e909e24cf4225dfe31f22"), #111111;
-  color: #eee;
-  height: 100vh;
-  min-width: 360px;
-  width: 100%;  
-}
-
-</style>
-
+<link rel="stylesheet" href="../static/style.css">
 </head>
 <article class = "wrapper">
 {% block content %}
