--- a/openings-collection/templates/add_opening.html
+++ b/openings-collection/templates/add_opening.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="../static/style.css">
+<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <article class = "wrapper">
 {% block content %}
